<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ceptebakicim.com.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:showIn="@layout/app_bar_main">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_main_counters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/textView_kabulBekleyen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerView_main_counters"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/mainText"
            android:text="@string/waiting_for_accept"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_main_kabulBekleyen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_kabulBekleyen"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/textView_kabulEdilen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerView_main_kabulBekleyen"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/mainText"
            android:text="@string/accepted_offers"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_main_kabulEdilen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_kabulEdilen"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/textView_gorusmedeOldugum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerView_main_kabulEdilen"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/mainText"
            android:text="@string/in_interview"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_main_gorusmedeOldugum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_gorusmedeOldugum"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/textView_dahaOnceGorustugum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerView_main_gorusmedeOldugum"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/mainText"
            android:text="Daha Önce Görüştüğüm Bakıcılar"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_main_dahaOnceGorustugum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_dahaOnceGorustugum"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/textView_gorusmedeOldugum_bakici"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerView_main_dahaOnceGorustugum"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/mainText"
            android:text="@string/in_interview"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="italic"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_main_gorusmedeOldugum_bakici"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_gorusmedeOldugum_bakici"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/textView_tumTeklifler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/recyclerView_main_gorusmedeOldugum_bakici"
            android:layout_centerHorizontal="true"
            android:layout_margin="5dp"
            android:background="@color/mainText"
            android:text="Tüm Teklifler"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="23sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView_main_tumTeklifler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_tumTeklifler"
            android:scrollbars="vertical" />

    </RelativeLayout>
</ScrollView>